Fix zoom on iOS on forms
Set HTML meta tag to prevent zoom from iOS.
Reduce input size in Money book menu to avoid overflow.

--- a/apps/website/static/components/money-book-menu/money_book_menu.sass
+++ b/apps/website/static/components/money-book-menu/money_book_menu.sass
@@ -77,5 +77,5 @@
   .is-modifying
 
     input.amount
-      width: 90%
+      width: 80%
 
